--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "svelte": "^3.42.6"
   },
   "dependencies": {
+    "dayjs": "^1.10.7",
     "sirv-cli": "^1.0.0",
     "svelte-forms-lib": "^1.10.7",
     "svelte-spa-router": "^3.2.0",
